Small style change for Alerts to fix spacing

--- a/src/Alert/components/_Alert.scss
+++ b/src/Alert/components/_Alert.scss
@@ -3,7 +3,7 @@
 // Desktop
 @media (min-width: 768px) {
   .forAlerts {
-    margin: -12px 0 -24px 0 !important;
+    margin: -12px 0 0 0 !important;
   }
 
   .alertWrapper {
